@@ -141,6 +141,7 @@ We hope this new theme will bring accessibility improvements for users who perfe
  * Fix incorrect API serialisation for document `download_url` when `WAGTAILDOCS_SERVE_METHOD` is `direct` (Swojak-A)
  * Fix template configuration of snippets index results view (fidoriel, Sage Abdullah)
  * Prevent long preview mode names from making the select element overflow the side panel (Sage Abdullah)
+ * When i18n is not enabled, avoid making a Locale query on every page view (Dan Braghis)
 
 ### Documentation
 
