@@ -85,7 +85,8 @@ Changelog
  * Fix: Fix incorrect API serialisation for document `download_url` when `WAGTAILDOCS_SERVE_METHOD` is `direct` (Swojak-A)
  * Fix: Fix template configuration of snippets index results view (fidoriel, Sage Abdullah)
  * Fix: Prevent long preview mode names from making the select element overflow the side panel (Sage Abdullah)
- * Autosize text area field will now correctly resize when switching between comments toggle states (Suyash Srivastava)
+ * Fix: Autosize text area field will now correctly resize when switching between comments toggle states (Suyash Srivastava)
+ * Fix: When i18n is not enabled, avoid making a Locale query on every page view (Dan Braghis)
  * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
  * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp, Thibaud Colas)
  * Docs: Fix broken formatting for MultiFieldPanel / FieldRowPanel permission kwarg docs (Matt Westcott)
